# The-Crate-Studio

./: .cursorrules  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CrateSandbox.vcxproj  CrateSandbox.vcxproj.filters  CrateSandbox_rc_lib.vcxproj  CrateSandbox_rc_lib.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  TheCrateStudio.slnx  TheCrateStudio.vcxproj  TheCrateStudio.vcxproj.filters  TheCrateStudioAssets.vcxproj  TheCrateStudioAssets.vcxproj.filters  TheCrateStudio_rc_lib.vcxproj  TheCrateStudio_rc_lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Architecture/.obsidian/: graph.json  workspace.json
Architecture/00_Core_Rules/: 10_Engineering_Invariants.md  MASTER_ARCHITECTURE.md  UI_UX_Master_Manifesto.md
Architecture/01_Modules/: Current_State.md  The_One_Sentence_Test.md  Zone_4_Piano_Roll.md
Architecture/03_Future_Tools/: The Crate Essentials.md  The Pianist.md
Docs/: MASTER_ARCHITECTURE.md
Source/: CrateStressTest.cpp  CrateStressTest.h  CrateWorkflowManager.cpp  CrateWorkflowManager.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/Engine/: CrateAnticipativeWrapper.cpp  CrateAnticipativeWrapper.h  CrateIPCConstants.h  CrateSandboxBridge.cpp  CrateSandboxBridge.h  FlightRecorder.h  PluginHealthRegistry.h  SandboxAirlock.h  SandboxManager.h  SandboxRouter.h
Source/Sandbox/: Main.cpp
Source/TestPlugins/CrateBulletproofTest/: CMakeLists.txt  CrateBulletproofTest.vcxproj  CrateBulletproofTest.vcxproj.filters  CrateBulletproofTest_All.vcxproj  CrateBulletproofTest_All.vcxproj.filters  CrateBulletproofTest_VST3.vcxproj  CrateBulletproofTest_VST3.vcxproj.filters  CrateBulletproofTest_rc_lib.vcxproj  CrateBulletproofTest_rc_lib.vcxproj.filters  CrateBulletproofTest_vst3_helper.vcxproj  CrateBulletproofTest_vst3_helper.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: AddIconButton.h  ArrangementComponent.cpp  ArrangementComponent.h  ArrangementLayout.h  AutomationLaneComponent.cpp  AutomationLaneComponent.h  BottomPanelContainer.h  BrowserComponent.cpp  BrowserComponent.h  CrateColors.h  CrateCompressorPopup.h  CrateDesignSystem.h  CrateEQThumbnail.h  CrateFoldArrow.cpp  CrateFoldArrow.h  CrateMidiInspectorComponent.cpp  CrateMidiInspectorComponent.h  CrateMixerLookAndFeel.cpp  CrateMixerLookAndFeel.h  CratePianoRollComponent.cpp  CratePianoRollComponent.h  CrateSendSlot.h  CrateTheme.h  CrateTrackInspectorComponent.cpp  CrateTrackInspectorComponent.h  CrateValueBox.cpp  CrateValueBox.h  FlatGridComboLookAndFeel.cpp  FlatGridComboLookAndFeel.h  GhostButtonLookAndFeel.cpp  GhostButtonLookAndFeel.h  HardwareSlotLookAndFeel.cpp  HardwareSlotLookAndFeel.h  InsertsRackComponent.cpp  InsertsRackComponent.h  MasterAnalyzerComponent.h  MasterStrip.cpp  MasterStrip.h  MixerComponent.cpp  MixerComponent.h  (+32 more)
vst3_helpers/CrateBulletproofTest/: shared_defs_Debug.txt  shared_defs_MinSizeRel.txt  shared_incs_Debug.txt
vst3_helpers/EngineInPluginDemo/: shared_defs_Debug.txt  shared_defs_MinSizeRel.txt  shared_defs_Release.txt  shared_incs_MinSizeRel.txt
